# harness-proxy

./: .env.example  .gitignore  Cargo.toml  README.md  add-model-settings-file.md  models.json  tauri.conf.json
frontend/: package.json  vite.config.js
frontend/src/: App.jsx
scripts/: test_runner.rs
src/: main.rs  routing_rules.rs  state.rs
src/handlers/: chat.rs  mod.rs  models.rs  proxy.rs
