[package]
name = "harness-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
http = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
tauri = "2.11.2"
tauri-plugin-log = "2"
log = "0.4"

[[bin]]
name = "test_runner"
path = "scripts/test_runner.rs"

[build-dependencies]
tauri-build = "2.6.2"
